fix: parallel distri optim